@@ -1,3 +1,8 @@
+Mon Nov 29 13:17:52 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
+          Added doxygen comments.
+
 Mon Nov 29 12:31:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ContentFilterSetting.cpp:
